@@ -122,7 +122,7 @@ q {
 #portal-personaltools {
 	float: right;
 	background: #e3e3e3;
-	position: absolute;
+	position: relative;
 	z-index: 3; /* personaltools should be above #portal-header (with z-index: 2) */
 	top: 0;
 	right: 0;
@@ -142,9 +142,9 @@ q {
 #portal-languageselector {
 	float: right;
 	background: #e3e3e3;
-	position: absolute;
+	position: relative;
 	top: 0;
-	right: 10em;
+	right: 1em;
 	z-index: 3; /* portal-header has 2 and we need to be above to be clickable */
 	padding: 0.25em 0.5em;
 	font-size: 80%;
@@ -160,7 +160,7 @@ q {
 	float: right;
 	text-align: left;
 	clear: right;
-	margin-top: 2.5em;
+	margin-top: 0.8em;
 	font-size: 80%;
 }
 
